# Talimio

./: .dockerignore  .envrc  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  todolist_grafana.md
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  alembic.ini  cloudbuild.yaml  pyproject.toml  requirements.txt  requirements_pg.txt
backend/alembic/: env.py
backend/alembic/versions/: 3b1b31641ba5_add_description_column_to_nodes.py  55653b0b0b5d_add_description_column_to_nodes.py  7ed55411d823_add_label_id_to_node_model.py  f3966b25cde9_add_status_to_nodes.py
backend/src/: exceptions.py  main.py
backend/src/ai/: __init__.py  ai_service.py  client.py  constants.py  errors.py  litellm_config.py  litellm_embedder.py  mem0_litellm_embedder_patch.py  mem0_telemetry_disable_patch.py  memory.py  models.py  prompts.py  service.py  tool_preferences.py
backend/src/ai/assistant/: conversations_service.py  models.py  router.py  schemas.py  service.py
backend/src/ai/functions/: __init__.py  hackernews_search.py  internal_search.py  registry.py  web_search.py  youtube_search.py
backend/src/ai/mcp/: __init__.py  client.py  config.py  router.py  schemas.py  service.py  tooling.py
backend/src/ai/rag/: __init__.py  background_processor.py  chunk_storage.py  chunker.py  config.py  embeddings.py  exceptions.py  filters.py  ingest.py  parser.py  reprocess_books.py  retriever.py  router.py  schemas.py  service.py  vector_store.py  video_chunker.py
backend/src/ai/tools/: __init__.py  plan.py  runtime.py  sandbox.py  search.py  wikipedia.py
backend/src/assistant/: __init__.py  context.py  conversation_manager.py  enhanced_service.py  memory_integration.py  router.py  schemas.py  service.py
backend/src/auth/: __init__.py  config.py  context.py  crud.py  csrf.py  dependencies.py  emails.py  exceptions.py  manager.py  middleware.py  models.py  oauth.py  password_policy.py  request_state.py  router.py  schemas.py  security.py  supabase_auth.py  supabase_router.py  user_context.py  utils.py  validation.py
backend/src/books/: __init__.py  book_progress_service.py  facade.py  metadata.py  models.py  router.py  schemas.py  service.py
backend/src/books/services/: __init__.py  book_content_service.py  book_metadata_service.py  book_progress_service.py  book_progress_tracker.py  book_query_service.py  book_response_builder.py  book_service.py  book_upload_service.py  chapter_service.py  highlight_service.py  interface.py
backend/src/config/: __init__.py  database.py  env.py  logging.py  postgres.py  schema_casing.py  settings.py
backend/src/content/: UUID_HANDLING_ANALYSIS.md  router.py  router_improved.py  schemas.py  service.py  service_fast.py
backend/src/content/services/: __init__.py  content_archive_service.py  content_delete_service.py  content_progress_service.py  content_service.py  content_stats_service.py  content_transform_service.py  query_builder_service.py
backend/src/core/: __init__.py  auth_config_validator.py  auth_dependencies.py  auth_manager.py  base_service.py  database_config.py  error_handlers.py  interfaces.py  mode_aware_service.py  progress_calculator.py  user_context.py  user_utils.py
backend/src/courses/: __init__.py  facade.py  models.py  router.py  schemas.py
backend/src/courses/services/: __init__.py  adaptive_context_service.py  code_execution_service.py  concept_graph_service.py  concept_scheduler_service.py  concept_state_service.py  course_content_service.py  course_core_service.py  course_creation_service.py  course_lesson_service.py  course_management_service.py  course_orchestrator_service.py  course_progress_service.py  course_progress_tracker.py  course_query_service.py  course_response_builder.py  (+22 more)
backend/src/database/: __init__.py  add_missing_columns.py  add_tagging_columns.py  add_universal_rls_policies.py  add_user_table.py  auto_migrate.py  base.py  core.py  create_all_tables.py  engine.py  init.py  init_video_uuid.sql  lesson_repository.py  migrate.py  migrate_rehearsal.py  pagination.py  session.py
backend/src/flashcards/: __init__.py  facade.py  models.py  router.py  schemas.py  service.py
backend/src/highlights/: __init__.py  interfaces.py  models.py  router.py  schemas.py  service.py  validation.py
backend/src/learning_capabilities/: __init__.py  capability_registry.py  errors.py  facade.py  schemas.py
backend/src/lessons/: __init__.py  router.py  schemas.py  service.py
backend/src/middleware/: __init__.py  auth_error_handler.py  error_handlers.py  origin_check.py  security.py
backend/src/observability/: __init__.py  event_fields.py  http.py  log_context.py  otel.py  resources.py  setup.py
backend/src/onboarding/: __init__.py  router.py  schemas.py  service.py
backend/src/platform/: __init__.py
backend/src/progress/: __init__.py  db_models.py  models.py  protocols.py  queries.py  router.py  schemas.py  service.py
backend/src/roadmaps/: __init__.py  constants.py  dependencies.py  exceptions.py  learn_python.json  models.py  router.py  schemas.py  service.py
backend/src/scripts/: extract_toc_all_books.py
backend/src/storage/: __init__.py  base.py  exceptions.py  factory.py  gcs.py  init_lesson_table.py  lesson_dao.py  local.py  r2.py
backend/src/tagging/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/upload_sessions/: __init__.py  router.py
backend/src/user/: __init__.py  current_user_router.py  models.py  router.py  schemas.py  service.py
backend/src/users/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/videos/: __init__.py  facade.py  models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/fixtures/: auth_modes.py
backend/tests/integration/: test_adaptive_practice_grading.py  test_concept_aware_chat_context.py  test_content_deletion.py  test_course_delete_cascade.py  test_lesson_free_form_grading.py  test_observability.py  test_tagging.py
backend/tests/unit/: test_observability.py  test_rag_phase1_contracts.py  test_wikipedia_runtime.py  test_wikipedia_tool.py
(+815 files in other folders)
