[project]
name = "Talimio"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    # Settings & Validation
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Authentication
    "pyjwt>=2.8.0",
    "supabase>=2.0.0",
    # AI
    "litellm>=1.75.7",
    "pgvector>=0.3.0",
    "instructor>=1.7.0",
    "mem0ai>=0.1.116",
    "chonkie>=1.2.1",
    "dspy>=3.0.3",
    # Video
    "yt-dlp>=2024.0.0",
    # Document Processing
    "pymupdf>=1.24.0",
    "pdfminer-six>=20250506",
    "python-docx>=1.0.0",
    "pillow-heif>=1.1.0",
    "python-multipart>=0.0.5",
    "readabilipy>=0.2.0",
    "markdownify>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "goose3>=3.1.0",
    "unstructured[epub,pdf]>=0.10.0",
    # Markdown/MDX & Conversion
    "mdxjs-py>=0.1.0a2",
    "pypandoc-binary>=1.15",
    # Rate limiting & Security
    "slowapi>=0.1.9",
    "itsdangerous>=2.2.0",
    # Storage
    "aioboto3>=15.1.0",
    # Logging
    "loguru>=0.7.3",
    # Code Execution
    "e2b-code-interpreter>=2.0.0",
    "latex2sympy2-extended>=1.11.0",
    "mcp>=1.26.0",
    "starlette-csrf>=3.0.0",
    "pwdlib[argon2]>=0.3.0",
    "httpx-oauth>=0.16.1",
    "deptry>=0.24.0",
]

[dependency-groups]
dev = [
    # Development tools
    "ruff>=0.15.2",
    "aiosqlite>=0.21.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-sugar>=1.0.0",
    "httpx>=0.28.1",
    "respx>=0.22.0",
    "pytest-timeout>=2.4.0",
    "ty>=0.0.18",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",    # line too long (handled by formatter)
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "TRY300",   # try-else-block
    "TRY301",   # abstract-raise
    "TRY401",   # redundant-exception-object
    "INP001",   # implicit-namespace-package
    "PLR0913",  # too-many-arguments
    "PLC0415",  # import-outside-top-level
    "COM812",   # conflicts with Ruff’s formatter
    "PLR2004",  # magic-value-comparison (many are contextually appropriate)
    "ANN401",   # **kwargs typing (common pattern in Pydantic overrides)
    "FBT001",   # boolean-typed-positional-argument (often acceptable for internal APIs)
    "FBT002",   # boolean-default-positional-argument (often acceptable for internal APIs)
    "E402",     # module-import-not-at-top-of-file
    "DOC201",   # docstring returns sections are guidance-only for this repo
    "DOC402",   # docstring yields sections are guidance-only for this repo
    "DOC501",   # raised-exception docstring tracking is too noisy/churn-heavy
    "CPY001",   # copyright header policy is not enforced in this repo
    "PLR6301",  # no-self-use conflicts with class-based service organization
    "PLR0917",  # positional-argument threshold is guidance-only (not enforced)
    "PLR6201",  # set-literal membership style is guidance-only
    "PLC1901",  # empty-string comparison simplification is guidance-only
    "FURB113",  # extend-vs-append micro-style is guidance-only
    "B903",     # dataclass-or-namedtuple preference is not enforced
    "TC001",    # typing-only-first-party-import (we use from __future__ import annotations)
    "TC002",    # typing-only-third-party-import (we use from __future__ import annotations)
    "TC003"     # typing-only-standard-library-import  (we use from __future__ import annotations)
]
fixable = ["ALL"]
preview = true
future-annotations = false

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlalchemy.orm.DeclarativeBase",
    "src.database.base.Base",
    "abc.ABC",
    "typing.Protocol",
]
runtime-evaluated-decorators = [
    "fastapi.APIRouter.api_route",
    "fastapi.APIRouter.get",
    "fastapi.APIRouter.post",
    "fastapi.APIRouter.put",
    "fastapi.APIRouter.patch",
    "fastapi.APIRouter.delete",
    "fastapi.APIRouter.websocket",
    "fastapi.FastAPI.api_route",
    "fastapi.FastAPI.get",
    "fastapi.FastAPI.post",
    "fastapi.FastAPI.put",
    "fastapi.FastAPI.patch",
    "fastapi.FastAPI.delete",
    "pydantic.field_validator",
    "pydantic.model_validator",
    "pydantic.validate_call",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"migrations/*" = ["E501", "I001"]
"tests/*" = ["D100", "D103"]
"src/ai/prompts.py" = ["W291", "W293"]  # Preserve formatting in prompt strings

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -v --failed-first"
pythonpath = [".", "tests/fixtures"]
markers = [
    "smoke: Critical tests for quick validation",
    "integration: Integration tests with database",
    "e2e: End-to-end tests",
    "single_user: Tests specific to single-user mode",
    "multi_user: Tests specific to multi-user mode",
    "performance: Performance benchmarks",
]


[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ty.rules]
invalid-assignment = "error"
invalid-argument-type = "error"
invalid-return-type = "error"
call-non-callable = "error"
unresolved-reference = "error"
conflicting-declarations = "error"
duplicate-base = "error"
division-by-zero = "error"
unresolved-import = "warn"
invalid-type-checking-constant = "error"
invalid-type-form = "error"
deprecated = "warn"
redundant-cast = "warn"

[tool.ty.environment]
root = [".", "src"]

[tool.ty.terminal]
error-on-warning = false
output-format = "full"

# Security scanning
[tool.bandit]
exclude_dirs = ["tests", "migrations"]


# dead code detection
[tool.vulture]
exclude = ["migrations/", "tests/"]
ignore_decorators = ["@app.route", "@router.get", "@router.post"]
ignore_names = ["_*", "test_*"]
make_whitelist = true
min_confidence = 60
sort_by_size = true

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.svg,*.lock,*.min.*'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'Talimio'
